omni/tests/goldens/types/unknown_type_02.err
tests/goldens/types/unknown_type_02.omni:1:12: error: unknown type "Mystery2"
  let value2:Mystery2 = 1
             ^~~ hint: import or declare the type before use
tests/goldens/types/unknown_type_02.omni:1:1: error: cannot assign int to Mystery2
  let value2:Mystery2 = 1
  ^~~ hint: adjust the expression or type annotation
