omni/tests/goldens/types/unknown_type_02.omni
let value2:Mystery2 = 1
